--- a/MigraDoc/src/MigraDoc.DocumentObjectModel/MigraDoc.DocumentObjectModel.csproj
+++ b/MigraDoc/src/MigraDoc.DocumentObjectModel/MigraDoc.DocumentObjectModel.csproj
@@ -18,7 +18,7 @@
     <PackageId>PdfSharp.MigraDoc.Standard.DocumentObjectModel</PackageId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocumentObjectModel.Fields\BookmarkField.cs" />
